fix(@dpc-sdp/ripple-ui-core): :bug: fixed rounded focus outline on safari
safari doesn't support a rounded outline, changed to box-shadow instead

--- a/packages/ripple-ui-core/src/styles/utilities/_focus.css
+++ b/packages/ripple-ui-core/src/styles/utilities/_focus.css
@@ -100,14 +100,15 @@
 .rpl-u-focusable-outline {
   &:focus,
   &.rpl-u-focusable--force-on {
-    box-shadow: 0 0 0 var(--rpl-border-1) var(--rpl-clr-dark) inset;
-    outline: var(--rpl-border-3) solid var(--rpl-clr-focus);
+    box-shadow: 0 0 0 var(--rpl-border-1) var(--rpl-clr-dark) inset,
+      0 0 0 var(--rpl-border-3) var(--rpl-clr-focus);
   }
 
   &.rpl-u-focusable--alt-colour {
     &:focus,
     &.rpl-u-focusable--force-on {
-      box-shadow: 0 0 0 var(--rpl-border-1) var(--rpl-clr-type-primary-contrast) inset;
+      box-shadow: 0 0 0 var(--rpl-border-1) var(--rpl-clr-type-primary-contrast) inset,
+        0 0 0 var(--rpl-border-3) var(--rpl-clr-focus);
     }
   }
 }
@@ -115,13 +116,14 @@
 .rpl-u-focusable-outline--no-border {
   &:focus,
   &.rpl-u-focusable--force-on {
-    box-shadow: none;
+    box-shadow: 0 0 0 var(--rpl-border-3) var(--rpl-clr-focus);
   }
 
   &.rpl-u-focusable--alt-colour {
     &:focus,
     &.rpl-u-focusable--force-on {
-      box-shadow: none;
+      box-shadow: 0 0 0 var(--rpl-border-3) var(--rpl-clr-focus);
     }
   }
 }
+
